[gd_scene load_steps=17 format=3 uid="uid://d31bq328wfore"]

[ext_resource type="Script" path="res://objects/Enemys/boss/Phase 1/boss_phase_1.gd" id="1_q1s7m"]
[ext_resource type="Script" path="res://objects/hurtbox.gd" id="2_8n533"]
[ext_resource type="Script" path="res://objects/Enemys/states/State Machine.gd" id="3_17gaw"]
[ext_resource type="Script" path="res://objects/Enemys/boss/Phase 1/states/boss_P1_dash_attack.gd" id="4_ehept"]
[ext_resource type="Script" path="res://objects/Enemys/boss/Phase 1/states/boss_P1_walk_away.gd" id="8_ogiva"]
[ext_resource type="Script" path="res://objects/Enemys/boss/Phase 1/states/boss_P1_idle.gd" id="8_p7amt"]
[ext_resource type="Script" path="res://objects/Enemys/boss/Phase 1/states/boss_P1_knockback.gd" id="8_rrxt6"]
[ext_resource type="Script" path="res://objects/Enemys/boss/Phase 1/states/boss_P1_pathfind.gd" id="9_vdmoq"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_foq3r"]
size = Vector2(32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_41dxn"]
font_size = 9
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cj4s"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_t25iu"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjnlu"]
size = Vector2(40, 40)

[sub_resource type="Animation" id="Animation_56yeu"]
resource_name = "Attack"
length = 0.5

[sub_resource type="Animation" id="Animation_3sky3"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4bv1x"]
_data = {
"Attack": SubResource("Animation_56yeu"),
"RESET": SubResource("Animation_3sky3")
}

[node name="boss phase 1" type="CharacterBody2D" groups=["boss"]]
z_index = 3
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_q1s7m")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.997072, 0, 0.142165, 1)
texture = SubResource("PlaceholderTexture2D_foq3r")

[node name="Label" type="Label" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = -1.0
text = "BOSS"
label_settings = SubResource("LabelSettings_41dxn")
horizontal_alignment = 1

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
path_postprocessing = 1
radius = 32.0
avoidance_layers = 2
avoidance_mask = 2

[node name="hurtbox" type="Area2D" parent="." groups=["hurtbox"]]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("2_8n533")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("RectangleShape2D_3cj4s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t25iu")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 2

[node name="attack_cooldown" type="Timer" parent="."]
one_shot = true

[node name="attack_box" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_box"]
shape = SubResource("RectangleShape2D_pjnlu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="attack_box"]
libraries = {
"": SubResource("AnimationLibrary_4bv1x")
}

[node name="random_attack_cooldown" type="Timer" parent="."]
one_shot = true

[node name="dash_cooldown" type="Timer" parent="."]
one_shot = true

[node name="State_Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_17gaw")
initial_state = NodePath("boss_P1_Idle")

[node name="boss_P1_dash_attack" type="Node" parent="State_Machine"]
script = ExtResource("4_ehept")

[node name="boss_P1_Idle" type="Node" parent="State_Machine"]
script = ExtResource("8_p7amt")

[node name="boss_P1_Knockback" type="Node" parent="State_Machine"]
script = ExtResource("8_rrxt6")

[node name="boss_P1_pathfind" type="Node" parent="State_Machine"]
script = ExtResource("9_vdmoq")

[node name="boss_P1_walk_away" type="Node" parent="State_Machine"]
script = ExtResource("8_ogiva")

[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="area_entered" from="attack_box" to="." method="_on_attack_box_area_entered"]
[connection signal="area_exited" from="attack_box" to="." method="_on_attack_box_area_exited"]
[connection signal="timeout" from="random_attack_cooldown" to="." method="_on_random_attack_cooldown_timeout"]
